# ECE420_Labs

./: .gitignore  CMakeLists.txt  ECE420_Labs.code-workspace  Makefile
Lab1/: CMakeLists.txt  Makefile  README
Lab1/Code/: IO.c  IO.h  main.cpp  matrixgen.c  serialtester.c
Lab2/: CMakeLists.txt  Makefile  server_output_time_aggregated
Lab2/Code/: .gitignore  Makefile  arrayRW.c  attacker.c  client.c  common.c  common.h  main1.cpp  main2.cpp  main3.cpp  main4.cpp  readme  server.cpp  server.h  server1.cpp  server2.cpp  server3.cpp  server4.cpp  server_impl.cpp  shared.c  simpleClient.c  simpleServer.c  test.sh  time_s1_n10  time_s1_n100  time_s1_n1000  time_s2_n10  time_s2_n100  time_s2_n1000  time_s3_n10  time_s3_n100  time_s3_n1000  time_s4_n10  time_s4_n100  time_s4_n1000  timer.h
Lab2/Code/demos/: arrayRW.c  simpleClient.c  simpleServer.c
Lab2/Report/: lab_report.tex
Lab3/: CMakeLists.txt
Lab3/Code/: IO.c  IO.h  Makefile  datagen.c  main.cpp  run.sh  serialtester.c  timer.h
Lab4/: .clang-format
Lab4/Code/: .gitignore  IO.c  IO.h  Lab4_IO.c  Lab4_IO.h  Makefile  ReadMe  bench.py  datatrim.c  hosts  main.cpp  serialtester.c  timer.h  utils.c  utils.h
Lab5/Code/: .gitignore  Makefile  datatrim.c  task1.txt  task2.txt  task3.txt  task4.txt
Lab5/Members/: members.txt
